# loan-calcs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
loan_calcs/: __init__.py  data.py  loans.py
src/loan_calcs/: data.py  loans.py
tests/: test__loans.py
