# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-calcs"
version = "0.0.0"
description = "Library for common loan calculations."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dynamic = ["dependencies"]


[tool.setuptools]
dynamic.dependencies = {file = ["requirements.txt"]}


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage]
run.plugins = ["covdefaults"]  # https://youtu.be/70T6OxKwxm0
report.fail_under = 60
report.exclude_lines = [
    "@pytest.mark.skip",
    "@pytest.mark.xfail",
]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
